--- a/app/src/main/resources/templates/home.html
+++ b/app/src/main/resources/templates/home.html
@@ -68,13 +68,13 @@
                                 </svg>
                             </a>
                             <div class="func-block admin-func-block" th:if="${user.role.name() == 'ADMIN'}">
-                            <a href="/admin-panel">
-                                <p>Admin Panel</p>
-                                <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                    <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 2l7 4v5c0 5-3 9-7 11-4-2-7-6-7-11V6l7-4z"></path>
-                                </svg>
-                            </a>
-                        </div>
+                                <a href="/admin-panel">
+                                    <p>Admin Panel</p>
+                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 2l7 4v5c0 5-3 9-7 11-4-2-7-6-7-11V6l7-4z"></path>
+                                    </svg>
+                                </a>
+                            </div>
                         </div>
 
                         <div class="func-block">
@@ -134,8 +134,17 @@
             <div th:each="comment : ${post.comments}">
                 <p><strong th:text="${comment.owner.username}"></strong>: <span th:text="${comment.content}"></span></p>
             </div>
+
+            <!-- Bookmark button -->
+            <form th:action="@{/bookmarks/add/{postId}(postId=${post.id})}" method="post" th:if="${!post.bookmarked}">
+                <button type="submit">Bookmark</button>
+            </form>
+            <form th:action="@{/bookmarks/remove/{postId}(postId=${post.id})}" method="post" th:if="${post.bookmarked}">
+                <button type="submit">Remove Bookmark</button>
+            </form>
         </div>
     </div>
+
 
 
     <!-- Check if the posts list is empty -->
