--- a/app/src/main/resources/templates/bookmarks.html
+++ b/app/src/main/resources/templates/bookmarks.html
@@ -12,128 +12,124 @@
         <a class="logo">Morsel</a>
     </nav>
 </header>
-<div class="nav-bar"><div class="side-bar-container">
-    <nav>
+
+<div class="nav-bar">
+    <div class="side-bar-container">
         <nav>
-            <div class="nav-bar">
-                <div class="side-bar-container">
-                    <div class="side_navbar">
-                        <!-- App Name -->
-                        <div class="app-nav-bar">
-                            <div class="app-nav-bar-name">Morsel</div>
-                            <div class="app-nav-bar-version">v1.0.0</div>
-                        </div>
-                        <div class="func-block">
-                            <div class="func-block">
-                                    <a class="home" href="/home">
-                                        <p>Home</p>
-                                        <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"></path>
-                                        </svg>
-                                    </a>
-                                <!-- My Profile -->
-                                <a href="/users/{id}/profile" class="flex items-center space-x-2">
-                                    <p>My Profile</p>
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 14c3.3 0 6 2.7 6 6H6c0-3.3 2.7-6 6-6zm0-10a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"></path>
-                                    </svg>
-                                </a>
-                                <a class="messages" href="/messages/chat">
-                                    <p>Messages</p>
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 16c0 1.1.9 2 2 2h3v3l4-3h7c1.1 0 1.99-.9 1.99-2L22 4c0-1.1-.9-2-2-2z"></path>
-                                    </svg>
-                                </a>
-                                <!-- Notifications -->
-                                <a href="/notifications" class="flex items-center space-x-2">
-                                    <p>Notifications</p>
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 22c1.1 0 1.99-.9 1.99-2H10c0 1.1.89 2 1.99 2zm6-6V9c0-3.31-2.69-6-6-6S6 5.69 6 9v7l-2 2v1h16v-1l-2-2z"></path>
-                                    </svg>
-                                </a>
-
-                                <!-- Followers/Following -->
-                                <a href="/friendships/pending" class="flex items-center space-x-2">
-                                    <p>Followers / Following</p>
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M5 21v-4a4 4 0 1 1 8 0v4m4 0v-4a4 4 0 1 1 8 0v4M9 7a4 4 0 1 1 8 0 4 4 0 0 1-8 0z"></path>
-                                    </svg>
-                                </a>
-                                <a href="/posts">
-                                    <p>My Posts</p>
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M4 3h16c1.1 0 1.99.9 1.99 2L22 19c0 1.1-.9 2-2 2H4c-1.1 0-1.99-.9-1.99-2L2 5c0-1.1.9-2 2-2zM12 8h4v4h-4z"></path>
-                                    </svg>
-                                </a>
-                                <div class="func-block admin-func-block" th:if="${user.role.name() == 'ADMIN'}">
-                                    <a href="/admin-panel">
-                                        <p>Admin Panel</p>
-                                        <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 2l7 4v5c0 5-3 9-7 11-4-2-7-6-7-11V6l7-4z"></path>
-                                        </svg>
-                                    </a>
-                                </div>
-                            </div>
-
-                            <div class="func-block">
-                                <a href="/posts/new">
-                                    <p>Add Recipe</p>
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 6v12m6-6H6"></path>
-                                    </svg>
-                                </a>
-                            </div>
-
-                            <!-- Logout -->
-                            <div class="func-block">
-                                <a class="logout" href="/logout">
-                                    <p>Logout</p>
-                                    <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 17l4-4-4-4M20 12H8"></path>
-                                    </svg>
-                                </a>
-                            </div>
-                        </div>
+            <div class="side_navbar">
+                <!-- App Name -->
+                <div class="app-nav-bar">
+                    <div class="app-nav-bar-name">Morsel</div>
+                    <div class="app-nav-bar-version">v1.0.0</div>
+                </div>
+                <div class="func-block">
+                    <a class="home" href="/home">
+                        <p>Home</p>
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"></path>
+                        </svg>
+                    </a>
+                    <!-- My Profile -->
+                    <a href="/users/{id}/profile" class="flex items-center space-x-2">
+                        <p>My Profile</p>
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 14c3.3 0 6 2.7 6 6H6c0-3.3 2.7-6 6-6zm0-10a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"></path>
+                        </svg>
+                    </a>
+                    <a class="messages" href="/messages/chat">
+                        <p>Messages</p>
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 16c0 1.1.9 2 2 2h3v3l4-3h7c1.1 0 1.99-.9 1.99-2L22 4c0-1.1-.9-2-2-2z"></path>
+                        </svg>
+                    </a>
+                    <!-- Notifications -->
+                    <a href="/notifications" class="flex items-center space-x-2">
+                        <p>Notifications</p>
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 22c1.1 0 1.99-.9 1.99-2H10c0 1.1.89 2 1.99 2zm6-6V9c0-3.31-2.69-6-6-6S6 5.69 6 9v7l-2 2v1h16v-1l-2-2z"></path>
+                        </svg>
+                    </a>
+                    <!-- Followers/Following -->
+                    <a href="/friendships/pending" class="flex items-center space-x-2">
+                        <p>Followers / Following</p>
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M5 21v-4a4 4 0 1 1 8 0v4m4 0v-4a4 4 0 1 1 8 0v4M9 7a4 4 0 1 1 8 0 4 4 0 0 1-8 0z"></path>
+                        </svg>
+                    </a>
+                    <a href="/posts">
+                        <p>My Posts</p>
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M4 3h16c1.1 0 1.99.9 1.99 2L22 19c0 1.1-.9 2-2 2H4c-1.1 0-1.99-.9-1.99-2L2 5c0-1.1.9-2 2-2zM12 8h4v4h-4z"></path>
+                        </svg>
+                    </a>
+                    <div class="func-block admin-func-block" th:if="${user.role.name() == 'ADMIN'}">
+                        <a href="/admin-panel">
+                            <p>Admin Panel</p>
+                            <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 2l7 4v5c0 5-3 9-7 11-4-2-7-6-7-11V6l7-4z"></path>
+                            </svg>
+                        </a>
                     </div>
+                </div>
+                <div class="func-block">
+                    <a href="/posts/new">
+                        <p>Add Recipe</p>
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M12 6v12m6-6H6"></path>
+                        </svg>
+                    </a>
+                </div>
+                <!-- Logout -->
+                <div class="func-block">
+                    <a class="logout" href="/logout">
+                        <p>Logout</p>
+                        <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 17l4-4-4-4M20 12H8"></path>
+                        </svg>
+                    </a>
                 </div>
             </div>
         </nav>
+    </div>
+</div>
 
-    </nav>
-</div>
-</div>
-<!-- Check if there are no bookmarked posts -->
-<div th:if="${#lists.isEmpty(bookmarkedPosts)}">
-    <div class="col-12 text-center">
-        <div class="alert alert-info">
-            <h4 class="alert-heading">No Bookmarked Recipes</h4>
-            <p>It looks like you haven't bookmarked any recipes yet. Start saving your favourite recipes now!</p>
-            <hr>
-            <p class="mb-0">Click on the "BOOKMARK" button next to your favourite recipe to bookmark it.</p>
+<div class="content">
+    <!-- Check if there are no bookmarked posts -->
+    <div th:if="${#lists.isEmpty(bookmarks)}">
+        <div class="col-12 text-center">
+            <div class="alert alert-info">
+                <h4 class="alert-heading">No Bookmarked Recipes</h4>
+                <p>It looks like you haven't bookmarked any recipes yet. Start saving your favourite recipes now!</p>
+                <hr>
+                <p class="mb-0">Click on the "BOOKMARK" button next to your favourite recipe to bookmark it.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <!-- Loop through each bookmarked post -->
+        <div th:each="post : ${bookmarks}" class="col-md-4">
+            <div class="card mb-4">
+                <!-- Recipe Image -->
+                <img th:src="@{${post.imageUrl}}" class="card-img-top" alt="Recipe Image">
+                <div class="card-body">
+                    <!-- Recipe Title -->
+                    <h5 class="card-title" th:text="${post.title}"></h5>
+                    <!-- Recipe Description -->
+                    <p class="card-text" th:text="${post.content}"></p>
+
+                    <!-- View Recipe Button -->
+                    <a th:href="@{/posts/{id}(id=${post.id})}" class="btn btn-primary">View Recipe</a>
+
+                    <!-- Remove Bookmark Button -->
+                    <form th:action="@{/bookmarks/remove/{postId}(postId=${post.id})}" method="post">
+                        <button class="btn btn-danger mt-2">❌ Remove Bookmark</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 
-<!-- Display bookmarked posts -->
-<div th:each="posts : ${bookmarkedPosts}" class="col-md-4">
-    <div class="card mb-4">
-        <!-- Recipe image -->
-        <img th:src="@{${posts.imageUrl}}" class="card-img-top" alt="Recipe Image">
-        <div class="card-body">
-            <!-- Recipe title -->
-            <h5 class="card-title" th:text="${posts.title}"></h5>
-            <!-- Recipe description -->
-            <p class="card-text" th:text="${posts.content}"></p>
-            <!-- View recipe button -->
-            <a th:href="@{/posts/{id}(id=${posts.id})}" class="btn btn-primary">View Recipe</a>
-
-            <!-- Remove bookmark button -->
-            <form th:action="@{/api/bookmarks/remove/{id}(id=${posts.id})}" method="post">
-                <input type="hidden" name="userId" th:value="${#authentication.principal.id}" />
-                <button class="btn btn-danger mt-2">❌ Remove Bookmark</button>
-            </form>
-        </div>
-    </div>
-</div>
 </body>
 </html>
